# fit-izg-computer-graphics-labs

./: README.md
izg_lab_01/: CMakeLists.txt  README.md  base.cpp  base.h
izg_lab_01_color_space_reduction/: README.md  main.cpp  student.cpp
izg_lab_02/: README.md  base.h  color.cpp  globals.h  io.cpp  rasterizer.cpp  rasterizer.h  student.h
izg_lab_02/data/: .gitignore
izg_lab_02_raster_graphics/: CMakeLists.txt  README.md  color.h  io.h  main.cpp  student.cpp
izg_lab_03/: Makefile  izg.vcxproj
izg_lab_03/Debug/: izg.ilk  vc143.idb
izg_lab_03/Debug/izg.tlog/: CL.command.1.tlog  link.command.1.tlog  link.write.1.tlog
izg_lab_03/SDL-1.2.15/lib/x64/: SDL.lib
izg_lab_03/SDL-1.2.15/lib/x64/Debug/: SDLmain.lib
izg_lab_03/SDL-1.2.15/lib/x86/: SDL.lib  SDLmain.lib
izg_lab_03/SDL-1.2.15/lib/x86/Debug/: SDL.lib
izg_lab_03/src/: main.cpp
izg_lab_03_filling_2d_objects/: README.md  izg.sln  izg.vcxproj.filters
izg_lab_03_filling_2d_objects/Debug/: izg.exe.recipe  izg.vcxproj.FileListAbsolute.txt
izg_lab_03_filling_2d_objects/Debug/izg.tlog/: CL.read.1.tlog  CL.write.1.tlog  izg.lastbuildstate  link.read.1.tlog
izg_lab_03_filling_2d_objects/SDL-1.2.15/lib/x64/: SDLmain.lib
izg_lab_03_filling_2d_objects/SDL-1.2.15/lib/x64/Debug/: SDL.lib
izg_lab_03_filling_2d_objects/SDL-1.2.15/lib/x86/Debug/: SDLmain.lib
izg_lab_03_filling_2d_objects/src/: base.h  color.cpp  color.h  globals.h  io.cpp  io.h  student.cpp  student.h
izg_lab_04/: CMakeLists.txt  Makefile
izg_lab_04/3rdPartyLibs/GTest/lib/: gmock_main.lib  gtest.lib
izg_lab_04/3rdPartyLibs/GTest/lib/pkgconfig/: gtest.pc  gtest_main.pc
izg_lab_04/CMake/: CMakeMarcos.cmake
izg_lab_04/include/: IZG_MultiDragger.h  IZG_RotateCylinderDragger.h  IZG_Scale1DDragger.h  IZG_TrackballDragger.h  IZG_Translate1DDragger.h
izg_lab_04/src/: IZG_MultiDragger.cpp  Student.cpp
izg_lab_04/tests/: StudentTests.cpp  tests.cpp
izg_lab_04_3d_transformations/: README.md  izg_lab_04.blend
izg_lab_04_3d_transformations/3rdPartyLibs/GTest/lib/: gmock.lib  gtest_main.lib  gtest_maind.lib
izg_lab_04_3d_transformations/3rdPartyLibs/GTest/lib/pkgconfig/: gmock.pc  gmock_main.pc
izg_lab_04_3d_transformations/include/: Student.h
izg_lab_04_3d_transformations/src/: IZG_RotateCylinderDragger.cpp  IZG_Scale1DDragger.cpp  IZG_TrackballDragger.cpp  IZG_Translate1DDragger.cpp  main.cpp
izg_lab_04_3d_transformations/tests/: CustomListener.h
izg_lab_05/: CMakeLists.txt  color.cpp  color.h  globals.h  main.cpp  vector.cpp  vector.h
izg_lab_05_curves/: README.md  base.h  main.h  student.cpp  student.h
izg_lab_06/: CMakeLists.txt  Doxyfile
izg_lab_06/doc/html/search/: pages_0.js
izg_lab_06/doc/latex/: index.tex  refman.tex
izg_lab_06/libs/ArgumentViewer/: README.md
izg_lab_06/libs/ArgumentViewer/src/ArgumentViewer/: ArgumentViewer.h  Exception.h  Fwd.h
izg_lab_06/libs/ArgumentViewer/src/ArgumentViewer/private/: ArgumentListFormat.cpp  ArgumentListFormat.h  ArgumentViewerImpl.cpp  ArgumentViewerImpl.h  ContextFormat.cpp  ContextFormat.h  Format.cpp  Format.h  IsPresentFormat.cpp  LineSplitter.h  StringVectorFormat.cpp  StringVectorFormat.h  ValueFormat.cpp  VectorFormat.h
izg_lab_06/libs/BasicCamera/: CMakeUtils.cmake
izg_lab_06/libs/BasicCamera/src/BasicCamera/: FreeLookCamera.h  Fwd.h  PerspectiveCamera.cpp
izg_lab_06/libs/TxtUtils/: CMakeLists.txt
izg_lab_06/libs/TxtUtils/src/TxtUtils/: TxtUtils.h
izg_lab_06/libs/geGL/src/geGL/: geGL.cpp
izg_lab_06/libs/geGL/src/geGL/private/: linux_OpenGLFunctionLoader.cpp  mac_OpenGLFunctionLoader.cpp  windows_OpenGLFunctionLoader.cpp
izg_lab_06/libs/stb_image/: stb_image.h  stb_image_write.h
izg_lab_06/shaders/: 00_empty.glsl  01_triangle.glsl  02_triangle3D.glsl  03_function.glsl  04_vectors.glsl  05_array.glsl  07_fullScreenQuad.glsl  09_fragCoord3D.glsl  10_attribs.glsl  11_uv.glsl  17_korea.glsl
izg_lab_06_shaders/: README.md
izg_lab_06_shaders/doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html
izg_lab_06_shaders/doc/html/search/: all_0.js
izg_lab_06_shaders/libs/: impl.cpp
izg_lab_06_shaders/libs/ArgumentViewer/: CMakeLists.txt
izg_lab_06_shaders/libs/ArgumentViewer/src/ArgumentViewer/: ArgumentViewer.cpp
izg_lab_06_shaders/libs/ArgumentViewer/src/ArgumentViewer/private/: CommonFunctions.cpp  CommonFunctions.h  Globals.cpp  Globals.h  IsPresentFormat.h  LineSplitter.cpp  SingleValueFormat.h  ValueFormat.h
izg_lab_06_shaders/libs/BasicCamera/: CMakeLists.txt  README.md
izg_lab_06_shaders/libs/BasicCamera/src/BasicCamera/: Camera.h  FreeLookCamera.cpp  OrbitCamera.cpp  OrbitCamera.h  PerspectiveCamera.h
izg_lab_06_shaders/libs/MealyMachine/: CMakeLists.txt
izg_lab_06_shaders/libs/TxtUtils/: README.md
izg_lab_06_shaders/libs/TxtUtils/src/TxtUtils/: TxtUtils.cpp
izg_lab_06_shaders/shaders/: 06_box.glsl  08_fragCoord.glsl  12_chess.glsl  13_japanTexture.glsl  14_japanFlag.glsl  15_two_materials.glsl  16_time.glsl  18_sphere.glsl  19_house.glsl  student.glsl
izg_lab_06_shaders/src/: documentation.dox  main.cpp  timer.hpp
